--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first page </title>
+    <title>Cam Lavoie</title>
 </head>
 <body>
-    <h1> Hello world</h1>
-    <p> this is my first web page</p>
+    <h1>Cam Lavoie</h1>
+    <img src="images/IMG_2656.jpg" alt="my profile">
+    <ul>
+        <li>041119028</li>
+        <li>interactive media design</li>
+        <li>mtm6201-github page repository</li>
+        <li> I love outdoor activities like hiking,canoeing and camping </li>
+    </ul>
     
 </body>
 </html>
